# test_task_komtek

./: README.md  openapi.yml  pyproject.toml
komtek/: settings.py  urls.py
komtek/terminology/: admin.py  filters.py  models.py  serializers.py  urls.py  views.py
komtek/terminology/migrations/: 0001_initial.py  0002_remove_glossary_initial_date_remove_glossary_version_and_more.py  0003_alter_glossaryversion_glossary.py
